@@ -1,6 +1,6 @@
 {
   "name": "simp-auditd",
-  "version": "8.11.0",
+  "version": "8.12.0",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing auditd and audispd",
   "license": "Apache-2.0",
@@ -15,22 +15,22 @@
   "dependencies": [
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 4.4.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
-      "name": "herculesteam/augeasproviders_grub",
-      "version_requirement": ">= 2.4.0 < 4.0.0"
+      "name": "puppet/augeasproviders_grub",
+      "version_requirement": ">= 3.1.0 < 6.0.0"
     }
   ],
   "simp": {
     "optional_dependencies": [
       {
         "name": "simp/rsyslog",
-        "version_requirement": ">= 7.2.1 < 9.0.0"
+        "version_requirement": ">= 7.6.0 < 9.0.0"
       }
     ]
   },
@@ -78,7 +78,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
